Create json for landing texts and create button component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,7 @@
 
 	// TypeScript With React
 	"[typescriptreact]": {
-		"editor.defaultFormatter": null
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 
 	// JavaScript
@@ -122,24 +122,133 @@
 
 	// Code Spell Checker
 	"cSpell.words": [
+		"Abrace",
+		"Ajuda",
+		"Aprenda",
+		"Chega",
 		"Colect",
+		"Come",
+		"Começar",
+		"Conecte",
+		"Contato",
+		"Contribuia",
+		"Descubra",
+		"Doa",
+		"Doações",
+		"Entrar",
 		"Enviroment",
+		"Espalhe",
 		"Helvetica",
+		"In",
+		"Início",
+		"Junte",
+		"Navegue",
+		"Parceiros",
 		"Parens",
+		"Pega",
+		"Pol",
+		"Política",
+		"Privacidade",
+		"Publica",
+		"Publicações",
+		"Registre",
 		"Roboto",
+		"Sobre",
+		"Todos",
+		"Vamo",
+		"Viaje",
+		"apaixonados",
+		"ar",
+		"assim",
+		"atrav",
+		"através",
 		"behance",
 		"builtins",
+		"busca",
 		"camelcase",
 		"cannonical",
+		"ci",
+		"cient",
+		"cientistas",
+		"científica",
+		"cio",
+		"ciência",
+		"comente",
+		"compartilhando",
+		"compartilhe",
+		"compartlhar",
+		"complexidade",
+		"comunidade",
+		"conhecimento",
+		"construir",
+		"conte",
+		"conteúdos",
 		"coverallsapp",
+		"descruba",
+		"direitos",
+		"divulga",
+		"divulgação",
+		"dormindo",
+		"dos",
 		"dribbble",
+		"educa",
+		"educação",
+		"elas",
+		"entusiastas",
+		"es",
+		"fazer",
+		"feitas",
+		"fica",
+		"financiado",
+		"futuro",
+		"ideia",
+		"import",
+		"importância",
+		"liga",
 		"linkedin",
+		"lugar",
+		"melhor",
+		"merecem",
+		"mesmo",
+		"mios",
+		"mostre",
+		"mundo",
+		"ncia",
+		"nessa",
 		"nextjs",
+		"o",
+		"onde",
 		"paren",
+		"participe",
+		"pela",
+		"pelo",
+		"pensamento",
+		"pesquisa",
+		"podemos",
+		"poder",
+		"poderá",
+		"possui",
 		"postbuild",
+		"pr",
+		"produzidos",
+		"professores",
+		"projeto",
+		"prêmios",
+		"publicados",
+		"qu",
+		"qualidade",
+		"quão",
+		"reservados",
+		"s",
 		"sonarjs",
 		"techmmunity",
 		"testid",
+		"teve",
+		"tica",
+		"tratadas",
+		"troca",
+		"universo",
+		"vamos",
 		"webfactory"
 	]
 }
